// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|a11y Default 1`] = `
<button
  type="button"
/>
`;

exports[`Storyshots Addons|a11y Disabled 1`] = `
<button
  disabled=""
  type="button"
>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addons|a11y Invalid contrast 1`] = `
<button
  style="color:black;background-color:black"
  type="button"
>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addons|a11y Label 1`] = `
<button
  type="button"
>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addons|a11y delayed render 1`] = `<div />`;

exports[`Storyshots Addons|a11y/Button Content 1`] = `
<button
  style="padding:12px 6px;font-size:12px;line-height:16px;border-radius:5px;background-color:#028402;color:#ffffff"
  type="button"
>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addons|a11y/Button Default 1`] = `
<button
  style="padding:12px 6px;font-size:12px;line-height:16px;border-radius:5px;background-color:#028402;color:#ffffff"
  type="button"
>
  null
</button>
`;

exports[`Storyshots Addons|a11y/Button Disabled 1`] = `
<button
  disabled=""
  style="padding:12px 6px;font-size:12px;line-height:16px;border-radius:5px;background-color:#028402;color:#ffffff"
  type="button"
>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addons|a11y/Button Invalid contrast 1`] = `
<button
  style="padding:12px 6px;font-size:12px;line-height:16px;border-radius:5px;color:#ffffff;background-color:#4caf50"
  type="button"
>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addons|a11y/Button Label 1`] = `
<button
  style="padding:12px 6px;font-size:12px;line-height:16px;border-radius:5px;background-color:#028402;color:#ffffff"
  type="button"
>
  null
</button>
`;

exports[`Storyshots Addons|a11y/Form With label 1`] = `
<div>
  <label
    for="1"
    style="padding:0 6px"
  >
    Testing the a11y addon
  </label>
  <input
    id="1"
  />
</div>
`;

exports[`Storyshots Addons|a11y/Form With placeholder 1`] = `
<div>
  <input
    id="1"
    placeholder="Testing the a11y addon"
  />
</div>
`;

exports[`Storyshots Addons|a11y/Form Without Label 1`] = `
<div>
  <input />
</div>
`;

exports[`Storyshots Addons|a11y/Image Presentation 1`] = `
<img
  role="presentation"
  src="http://placehold.it/350x150"
/>
`;

exports[`Storyshots Addons|a11y/Image With alt 1`] = `
<img
  alt="Testing the a11y addon"
  src="http://placehold.it/350x150"
/>
`;

exports[`Storyshots Addons|a11y/Image Without alt 1`] = `
<img
  src="http://placehold.it/350x150"
/>
`;

exports[`Storyshots Addons|a11y/Typography Correct 1`] = `
<div>
  <h1>
    Testing the a11y addon
  </h1>
  <p>
    Testing the a11y addon
  </p>
  <a
    href="javascript:void 0"
  >
    Testing the a11y addon...
  </a>
</div>
`;

exports[`Storyshots Addons|a11y/Typography Empty Heading 1`] = `<h2 />`;

exports[`Storyshots Addons|a11y/Typography Empty Link 1`] = `
<a
  href="javascript:void 0"
/>
`;

exports[`Storyshots Addons|a11y/Typography Empty Paragraph 1`] = `<p />`;

exports[`Storyshots Addons|a11y/Typography Link without href 1`] = `
<a>
  Testing the a11y addon...
</a>
`;
